--- a/packages/ui/row/row.module.css
+++ b/packages/ui/row/row.module.css
@@ -5,3 +5,19 @@
     gap: 1.5rem;
     box-sizing: border-box;
 }
+
+.start {
+    justify-content: flex-start;
+    align-content: flex-start;
+    align-items: flex-start;
+}
+.center {
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+}
+.end {
+    justify-content: flex-end;
+    align-content: flex-end;
+    align-items: flex-end;
+}
