--- a/packages/ui/stack/stack.module.css
+++ b/packages/ui/stack/stack.module.css
@@ -7,13 +7,16 @@
 
 .start {
     justify-content: flex-start;
+    align-content: flex-start;
     align-items: flex-start;
 }
 .center {
     justify-content: center;
+    align-content: center;
     align-items: center;
 }
 .end {
     justify-content: flex-end;
+    align-content: flex-end;
     align-items: flex-end;
 }
